--- a/AquaNet/vistas/detalle-monitoreo.html
+++ b/AquaNet/vistas/detalle-monitoreo.html
@@ -4,27 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AquaNet - Monitoreo del Agua</title>
+    <link rel="stylesheet" href="/AquaNet/css/foro.css">
     <link rel="stylesheet" href="/AquaNet/css/monitoreo.css">
     <link rel="stylesheet" href="/AquaNet/css/carousel.css">
     <link rel="stylesheet" href="/AquaNet/css/footer.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Fascinate&family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
+    </style>
 </head>
 <body>
     <header class="encabezado">
-        <div class="contenedor">
-            <h1 class="logo">AquaNet</h1>
-            <nav class="navegacion">
-                <a href="voluntariados.html" class="activo">Voluntariados</a>
-                <a href="foro.html">Foro</a>
-                <a href="#donaciones">Donaciones</a>
-                <a href="#nosotros">Nosotros</a>
-                <a href="#ayuda">Ayuda</a>
-            </nav>
-            <div class="menu-usuario">
-                <span>Usuario</span>
-                <div class="icono-usuario"></div>
-            </div>
-        </div>
-    </header>
+    <div class="contenedor">
+      <h1 class="logo">
+        ☰<a href="/AquaNet/vistas/home.html" class="return-home"><span class="aqua">Aqua</span><span
+            class="net">Net</span></a>
+      </h1>
+      <nav class="navegacion">
+        <a href="/AquaNet/vistas/voluntariadoVista.html" class="activo">Voluntariados</a>
+        <a href="/AquaNet/vistas/foroVista.html">Foro</a>
+        <a href="#donaciones">Donaciones</a>
+        <a href="#nosotros">Nosotros</a>
+        <a href="#ayuda">Ayuda</a>
+      </nav>
+      <div class="usuario">
+        <span>Usuario</span>
+        <div class="icono-usuario"><i class="fa-solid fa-user"></i></div>
+      </div>
+    </div>
+  </header>
 
     <main class="contenido-principal">
         <div class="contenedor-fluido">
