--- a/AquaNet/vistas/voluntariadoVista.html
+++ b/AquaNet/vistas/voluntariadoVista.html
@@ -1,192 +1,203 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>AquaNet - Voluntariados</title>
-<link rel="stylesheet" href="/AquaNet/css/voluntariado.css">
-<link rel="stylesheet" href="/AquaNet/css/carousel.css">
-<link rel="stylesheet" href="/AquaNet/css/footer.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
- 
- 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AquaNet - Voluntariados</title>
+  <link rel="stylesheet" href="/AquaNet/css/foro.css">
+  <link rel="stylesheet" href="/AquaNet/css/voluntariado.css">
+  <link rel="stylesheet" href="/AquaNet/css/carousel.css">
+  <link rel="stylesheet" href="/AquaNet/css/footer.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Fascinate&family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
+  </style>
+
 </head>
+
 <body>
-<header class="encabezado">
-<div class="contenedor-header">
-<button class="btn-menu">☰</button>
-<h1 class="logo">AquaNet</h1>
-<nav class="navegacion">
-<a href="#voluntariados" class="activo">Voluntariados</a>
-<a href="#nosotros">Nosotros</a>
-<a href="/AquaNet/vistas/foroVista.html">Foro</a>
-<a href="#ayuda">Ayuda</a>
-</nav>
-<div class="usuario">
-<span>Usuario</span>
-<div class="icono-usuario"><i class="fa-solid fa-user"></i></div>
- 
-</div>
-</div>
-</header>
- 
-    <main class="contenido-principal">
-<div class="grid-voluntariados">
-<article class="tarjeta-voluntariado">
-<img src="/AquaNet/img/voluntariados-cerca.jpg" alt="Voluntariados cerca de mí" class="imagen-fondo">
-<div class="overlay"></div>
-<div class="contenido-tarjeta">
-<h2 class="titulo-tarjeta">Voluntariados cerca de mí</h2>
-<p class="descripcion-tarjeta">Filtrá por zona y encontrá oportunidades cerca tuyo.</p>
-<a href="#" class="btn-ver-mas">Ver más</a>
-</div>
-</article>
- 
-            <article class="tarjeta-voluntariado">
-<img src="/AquaNet/img/limpieza-ambiental.jpg" alt="Limpieza ambiental" class="imagen-fondo">
-<div class="overlay"></div>
-<div class="contenido-tarjeta">
-<h2 class="titulo-tarjeta">Limpieza ambiental</h2>
-<p class="descripcion-tarjeta">Participá en jornadas de limpieza de ríos, lagunas o playas.</p>
-<a href="#" class="btn-ver-mas">Ver más</a>
-</div>
-</article>
- 
-            <article class="tarjeta-voluntariado">
-<img src="/AquaNet/img/educacion.jpg" alt="Educación y concientización" class="imagen-fondo">
-<div class="overlay"></div>
-<div class="contenido-tarjeta">
-<h2 class="titulo-tarjeta">Educación y concientización</h2>
-<p class="descripcion-tarjeta">Ayudá a difundir buenas prácticas de cuidado del agua en tu comunidad.</p>
-<a href="#" class="btn-ver-mas">Ver más</a>
-</div>
-</article>
- 
-            <article class="tarjeta-voluntariado">
-<img src="/AquaNet/img/monitoreo-agua.jpg" alt="Monitoreo del agua" class="imagen-fondo">
-<div class="overlay"></div>
-<div class="contenido-tarjeta">
-<h2 class="titulo-tarjeta">Monitoreo del agua</h2>
-<p class="descripcion-tarjeta">Medí niveles, analizá calidad del agua y reportá cambios en tu zona.</p>
-<a href="#" class="btn-ver-mas">Ver más</a>
-</div>
-</article>
- 
-            <article class="tarjeta-voluntariado">
-<img src="/AquaNet/img/apoyo-comunitario.png" alt="Apoyo comunitario" class="imagen-fondo">
-<div class="overlay"></div>
-<div class="contenido-tarjeta">
-<h2 class="titulo-tarjeta">Apoyo comunitario</h2>
-<p class="descripcion-tarjeta">Brindá asistencia a comunidades con problemas de acceso al agua.</p>
-<a href="#" class="btn-ver-mas">Ver más</a>
-</div>
-</article>
- 
-            <article class="tarjeta-voluntariado">
-<img src="/AquaNet/img/tecnologia-datos.png" alt="Tecnología y datos" class="imagen-fondo">
-<div class="overlay"></div>
-<div class="contenido-tarjeta">
-<h2 class="titulo-tarjeta">Tecnología y datos</h2>
-<p class="descripcion-tarjeta">Desarrollá herramientas, mapas o análisis para mejorar la gestión del agua.</p>
-<a href="#" class="btn-ver-mas">Ver más</a>
-</div>
-</article>
- 
-        </div>
-        <div class="carousel-flotante">
-<div class="contenedor-carousel">
-  <button class="nav-arrow izq" onclick="moveSlide(-1)">‹</button>
-
-  <div class="slides-viewport">
-    <div class="slides" id="slides">
-      
-      <div class="slide">
-        <div class="panel cortes">
-          <div class="panel-header">
-            <span class="title">Cortes programados</span>
-          </div>
-          <div class="panel-body">
-            <p><strong>Zona:</strong> Las Heras</p>
-            <p><strong>Horario:</strong> 13:00 a 15:00</p>
-            <p><strong>Motivo:</strong> Reparaciones</p>
-          </div>
-        </div>
-        <div class="panel consejos">
-          <div class="panel-header">
-            <span class="title">Consejos</span>
-          </div>
-          <div class="panel-body">
-            <p>textoalazarescritoparatesteatarcomoseveriaenlapantallalostextos</p>
-            <p>textoalazarescritoparatesteatarcomoseveriaenlapantallalostextos</p>
-            <p>textoalazarescritoparatesteatarcomoseveriaenlapantallalostextos</p>
-          </div>
-        </div>
+  <header class="encabezado">
+    <div class="contenedor">
+      <h1 class="logo">
+        ☰<a href="/AquaNet/vistas/home.html" class="return-home"><span class="aqua">Aqua</span><span
+            class="net">Net</span></a>
+      </h1>
+      <nav class="navegacion">
+        <a href="/AquaNet/vistas/voluntariadoVista.html" class="activo">Voluntariados</a>
+        <a href="/AquaNet/vistas/foroVista.html">Foro</a>
+        <a href="#donaciones">Donaciones</a>
+        <a href="#nosotros">Nosotros</a>
+        <a href="#ayuda">Ayuda</a>
+      </nav>
+      <div class="usuario">
+        <span>Usuario</span>
+        <div class="icono-usuario"><i class="fa-solid fa-user"></i></div>
       </div>
+    </div>
+  </header>
 
-      <div class="slide">
-        <div class="panel cortes">
-          <div class="panel-header">
-            <span class="title">Cortes programados</span>
-          </div>
-          <div class="panel-body">
-            <p><strong>Zona:</strong> Lavalle</p>
-            <p><strong>Horario:</strong> 09:00 a 11:00</p>
-            <p><strong>Motivo:</strong> Mantenimiento </p>
-          </div>
-        </div>
 
-        <div class="panel consejos">
-          <div class="panel-header">
-            <span class="title">Consejos</span>
-          </div>
-          <div class="panel-body">
-             <p>textoalazarescritoparatesteatarcomoseveriaenlapantallalostextos</p>
-            <p>textoalazarescritoparatesteatarcomoseveriaenlapantallalostextos</p>
-            <p>textoalazarescritoparatesteatarcomoseveriaenlapantallalostextos</p>
-          </div>
+
+
+  <main class="contenido-principal">
+    <div class="grid-voluntariados">
+      <article class="tarjeta-voluntariado">
+        <img src="/AquaNet/img/voluntariados-cerca.jpg" alt="Voluntariados cerca de mí" class="imagen-fondo">
+        <div class="overlay"></div>
+        <div class="contenido-tarjeta">
+          <h2 class="titulo-tarjeta">Voluntariados cerca de mí</h2>
+          <p class="descripcion-tarjeta">Filtrá por zona y encontrá oportunidades cerca tuyo.</p>
+          <a href="#" class="btn-ver-mas">Ver más</a>
         </div>
-      </div>
+      </article>
+
+      <article class="tarjeta-voluntariado">
+        <img src="/AquaNet/img/limpieza-ambiental.jpg" alt="Limpieza ambiental" class="imagen-fondo">
+        <div class="overlay"></div>
+        <div class="contenido-tarjeta">
+          <h2 class="titulo-tarjeta">Limpieza ambiental</h2>
+          <p class="descripcion-tarjeta">Participá en jornadas de limpieza de ríos, lagunas o playas.</p>
+          <a href="#" class="btn-ver-mas">Ver más</a>
+        </div>
+      </article>
+
+      <article class="tarjeta-voluntariado">
+        <img src="/AquaNet/img/educacion.jpg" alt="Educación y concientización" class="imagen-fondo">
+        <div class="overlay"></div>
+        <div class="contenido-tarjeta">
+          <h2 class="titulo-tarjeta">Educación y concientización</h2>
+          <p class="descripcion-tarjeta">Ayudá a difundir buenas prácticas de cuidado del agua en tu comunidad.</p>
+          <a href="#" class="btn-ver-mas">Ver más</a>
+        </div>
+      </article>
+
+      <article class="tarjeta-voluntariado">
+        <img src="/AquaNet/img/monitoreo-agua.jpg" alt="Monitoreo del agua" class="imagen-fondo">
+        <div class="overlay"></div>
+        <div class="contenido-tarjeta">
+          <h2 class="titulo-tarjeta">Monitoreo del agua</h2>
+          <p class="descripcion-tarjeta">Medí niveles, analizá calidad del agua y reportá cambios en tu zona.</p>
+          <a href="/AquaNet/vistas/detalle-monitoreo.html" class="btn-ver-mas">Ver más</a>
+        </div>
+      </article>
+
+      <article class="tarjeta-voluntariado">
+        <img src="/AquaNet/img/apoyo-comunitario.png" alt="Apoyo comunitario" class="imagen-fondo">
+        <div class="overlay"></div>
+        <div class="contenido-tarjeta">
+          <h2 class="titulo-tarjeta">Apoyo comunitario</h2>
+          <p class="descripcion-tarjeta">Brindá asistencia a comunidades con problemas de acceso al agua.</p>
+          <a href="#" class="btn-ver-mas">Ver más</a>
+        </div>
+      </article>
+
+      <article class="tarjeta-voluntariado">
+        <img src="/AquaNet/img/tecnologia-datos.png" alt="Tecnología y datos" class="imagen-fondo">
+        <div class="overlay"></div>
+        <div class="contenido-tarjeta">
+          <h2 class="titulo-tarjeta">Tecnología y datos</h2>
+          <p class="descripcion-tarjeta">Desarrollá herramientas, mapas o análisis para mejorar la gestión del agua.</p>
+          <a href="#" class="btn-ver-mas">Ver más</a>
+        </div>
+      </article>
 
     </div>
-  </div>
+    <div class="carousel-flotante">
+      <div class="contenedor-carousel">
+        <button class="nav-arrow izq" onclick="moveSlide(-1)">‹</button>
 
-  <button class="nav-arrow der" onclick="moveSlide(1)">›</button>
-</div>
-  </div>
-</div>
-</div>
-<footer class="footer">
+        <div class="slides-viewport">
+          <div class="slides" id="slides">
+
+            <div class="slide">
+              <div class="panel cortes">
+                <div class="panel-header">
+                  <span class="title">Cortes programados</span>
+                </div>
+                <div class="panel-body">
+                  <p><strong>Zona:</strong> Las Heras</p>
+                  <p><strong>Horario:</strong> 13:00 a 15:00</p>
+                  <p><strong>Motivo:</strong> Reparaciones</p>
+                </div>
+              </div>
+              <div class="panel consejos">
+                <div class="panel-header">
+                  <span class="title">Consejos</span>
+                </div>
+                <div class="panel-body">
+                  <p>textoalazarescritoparatesteatarcomoseveriaenlapantallalostextos</p>
+                  <p>textoalazarescritoparatesteatarcomoseveriaenlapantallalostextos</p>
+                  <p>textoalazarescritoparatesteatarcomoseveriaenlapantallalostextos</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="slide">
+              <div class="panel cortes">
+                <div class="panel-header">
+                  <span class="title">Cortes programados</span>
+                </div>
+                <div class="panel-body">
+                  <p><strong>Zona:</strong> Lavalle</p>
+                  <p><strong>Horario:</strong> 09:00 a 11:00</p>
+                  <p><strong>Motivo:</strong> Mantenimiento </p>
+                </div>
+              </div>
+
+              <div class="panel consejos">
+                <div class="panel-header">
+                  <span class="title">Consejos</span>
+                </div>
+                <div class="panel-body">
+                  <p>textoalazarescritoparatesteatarcomoseveriaenlapantallalostextos</p>
+                  <p>textoalazarescritoparatesteatarcomoseveriaenlapantallalostextos</p>
+                  <p>textoalazarescritoparatesteatarcomoseveriaenlapantallalostextos</p>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+        <button class="nav-arrow der" onclick="moveSlide(1)">›</button>
+      </div>
+    </div>
+    </div>
+    </div>
+  </main>
+  <footer class="footer">
     <div class="footer-contenido">
-        <div class="footer-col">
-            <h4>AquaNet</h4>
-        </div>
-        <div class="footer-col">
-            <h4>Navegación</h4>
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Voluntariados</a></li>
-                <li><a href="#">Nosotros</a></li>
-                <li><a href="#">Foro</a></li>
-                <li><a href="#">Ayuda</a></li>
-            </ul>
-        </div>
+      <div class="footer-col">
+        <h4>AquaNet</h4>
+      </div>
+      <div class="footer-col">
+        <h4>Navegación</h4>
+        <ul>
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">Voluntariados</a></li>
+          <li><a href="#">Nosotros</a></li>
+          <li><a href="#">Foro</a></li>
+          <li><a href="#">Ayuda</a></li>
+        </ul>
+      </div>
 
-        <div class="footer-col">
-            <h4>Contacto</h4>
-            <p>AquaNet@gmail.com</p>
-            <p>Mendoza, Argentina</p>
-        </div>
+      <div class="footer-col">
+        <h4>Contacto</h4>
+        <p>AquaNet@gmail.com</p>
+        <p>Mendoza, Argentina</p>
+      </div>
     </div>
 
     <div class="footer-copy">
-        © 2025 AquaNet — Todos los derechos reservados
+      © 2025 AquaNet — Todos los derechos reservados
     </div>
-</footer>
+  </footer>
 
-<div class="espacio-carrusel"></div>
-</main>
- 
-    <script src="/AquaNet/js/voluntariados.js"></script>
-    <script src="/AquaNet/js/carousel.js"></script>
+  <div class="espacio-carrusel"></div>
+
+  <script src="/AquaNet/js/voluntariados.js"></script>
+  <script src="/AquaNet/js/carousel.js"></script>
 </body>
+
 </html>
