cambio de rutas

--- a/AquaNet/vistas/foroVista.html
+++ b/AquaNet/vistas/foroVista.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AquaNet - Foro</title>
-    <link rel="stylesheet" href="/AquaNet/css/foro.css">
-    <link rel="stylesheet" href="/AquaNet/css/foroActualizado.css">
-    <link rel="stylesheet" href="/AquaNet/css/carousel.css">
-    <link rel="stylesheet" href="/AquaNet/css/footer.css">
+    <link rel="stylesheet" href="../css/foro.css">
+    <link rel="stylesheet" href="../css/foroActualizado.css">
+    <link rel="stylesheet" href="../css/carousel.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Fascinate&family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
@@ -17,12 +17,12 @@
     <header class="encabezado">
     <div class="contenedor">
       <h1 class="logo">
-        ☰<a href="/AquaNet/vistas/home.html" class="return-home"><span class="aqua">Aqua</span><span
+        ☰<a href="../vistas/home.html" class="return-home"><span class="aqua">Aqua</span><span
             class="net">Net</span></a>
       </h1>
       <nav class="navegacion">
-        <a href="/AquaNet/vistas/voluntariadoVista.html">Voluntariados</a>
-        <a href="/AquaNet/vistas/foroVista.html" class="activo">Foro</a>
+        <a href="../vistas/voluntariadoVista.html">Voluntariados</a>
+        <a href="../vistas/foroVista.html" class="activo">Foro</a>
         <a href="#donaciones">Donaciones</a>
         <a href="#nosotros">Nosotros</a>
         <a href="#ayuda">Ayuda</a>
@@ -35,7 +35,7 @@
   </header>
  
     <main class="contenido-principal">
-        <a href="/AquaNet/vistas/home.html" class="btn-volver">← Volver</a>
+        <a href="../vistas/home.html" class="btn-volver">← Volver</a>
  
         <div class="contenedor-foro">
             <aside class="barra-lateral">
@@ -43,7 +43,7 @@
                
                 <div class="seccion-filtros">
                     <div class="encabezado-filtro">
-                       <!-- <img src="/AquaNet/img/filter.svg" alt="Filtrar"> -->
+                       <!-- <img src="../img/filter.svg" alt="Filtrar"> -->
                         <i class="fa-solid fa-arrow-down-short-wide"></i>
                         <span>Filtrar por</span>
                     </div>
@@ -311,4 +311,4 @@
 </footer>
 
 <div class="espacio-carrusel"></div>
-<script src="/AquaNet/js/carousel.js"></script>
+<script src="../js/carousel.js"></script>
