--- a/AquaNet/vistas/home.html
+++ b/AquaNet/vistas/home.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/AquaNet/css/foro.css">
-    <link rel="stylesheet" href="/AquaNet/css/home.css">
-    <link rel="stylesheet" href="/AquaNet/css/carousel.css">
-    <link rel="stylesheet" href="/AquaNet/css/footer.css">
+    <link rel="stylesheet" href="../css/foro.css">
+    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../css/carousel.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Fascinate&family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
@@ -24,8 +24,8 @@
                 ☰<span class="aqua">Aqua</span><span class="net">Net</span>
             </h1>
             <nav class="navegacion">
-                <a href="/AquaNet/vistas/voluntariadoVista.html">Voluntariados</a>
-                <a href="/AquaNet/vistas/foroVista.html">Foro</a>
+                <a href="../vistas/voluntariadoVista.html">Voluntariados</a>
+                <a href="../vistas/foroVista.html">Foro</a>
                 <a href="#donaciones">Donaciones</a>
                 <a href="#nosotros">Nosotros</a>
                 <a href="#ayuda">Ayuda</a>
@@ -155,7 +155,7 @@
                     <textarea id="motivo" rows="3"></textarea>
                 </div>
 
-                <p class="mensaje-login">Debes <a href="/AquaNet/vistas/home.html">iniciar sesión</a> para hacer reportes</p>
+                <p class="mensaje-login">Debes <a href="../vistas/home.html">iniciar sesión</a> para hacer reportes</p>
 
                 <button class="btn-enviar" disabled>Enviar reporte</button>
 
@@ -261,7 +261,7 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDuZk8_GZfsEWY3_NQu9_-zoiWhVFKHhxQ&callback=initMap">
     </script>
 
-<script src="/AquaNet/js/home.js"></script>
-<script src="/AquaNet/js/carousel.js"></script>
+<script src="../js/home.js"></script>
+<script src="../js/carousel.js"></script>
 
 </html>
