--- a/AquaNet/vistas/voluntariadoVista.html
+++ b/AquaNet/vistas/voluntariadoVista.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AquaNet - Voluntariados</title>
-  <link rel="stylesheet" href="/AquaNet/css/foro.css">
-  <link rel="stylesheet" href="/AquaNet/css/voluntariado.css">
-  <link rel="stylesheet" href="/AquaNet/css/carousel.css">
-  <link rel="stylesheet" href="/AquaNet/css/footer.css">
+  <link rel="stylesheet" href="../css/foro.css">
+  <link rel="stylesheet" href="../css/voluntariado.css">
+  <link rel="stylesheet" href="../css/carousel.css">
+  <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Fascinate&family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
@@ -20,12 +20,12 @@
   <header class="encabezado">
     <div class="contenedor">
       <h1 class="logo">
-        ☰<a href="/AquaNet/vistas/home.html" class="return-home"><span class="aqua">Aqua</span><span
+        ☰<a href="../vistas/home.html" class="return-home"><span class="aqua">Aqua</span><span
             class="net">Net</span></a>
       </h1>
       <nav class="navegacion">
-        <a href="/AquaNet/vistas/voluntariadoVista.html" class="activo">Voluntariados</a>
-        <a href="/AquaNet/vistas/foroVista.html">Foro</a>
+        <a href="../vistas/voluntariadoVista.html" class="activo">Voluntariados</a>
+        <a href="../vistas/foroVista.html">Foro</a>
         <a href="#donaciones">Donaciones</a>
         <a href="#nosotros">Nosotros</a>
         <a href="#ayuda">Ayuda</a>
@@ -43,7 +43,7 @@
   <main class="contenido-principal">
     <div class="grid-voluntariados">
       <article class="tarjeta-voluntariado">
-        <img src="/AquaNet/img/voluntariados-cerca.jpg" alt="Voluntariados cerca de mí" class="imagen-fondo">
+        <img src="../img/voluntariados-cerca.jpg" alt="Voluntariados cerca de mí" class="imagen-fondo">
         <div class="overlay"></div>
         <div class="contenido-tarjeta">
           <h2 class="titulo-tarjeta">Voluntariados cerca de mí</h2>
@@ -53,7 +53,7 @@
       </article>
 
       <article class="tarjeta-voluntariado">
-        <img src="/AquaNet/img/limpieza-ambiental.jpg" alt="Limpieza ambiental" class="imagen-fondo">
+        <img src="../img/limpieza-ambiental.jpg" alt="Limpieza ambiental" class="imagen-fondo">
         <div class="overlay"></div>
         <div class="contenido-tarjeta">
           <h2 class="titulo-tarjeta">Limpieza ambiental</h2>
@@ -63,7 +63,7 @@
       </article>
 
       <article class="tarjeta-voluntariado">
-        <img src="/AquaNet/img/educacion.jpg" alt="Educación y concientización" class="imagen-fondo">
+        <img src="../img/educacion.jpg" alt="Educación y concientización" class="imagen-fondo">
         <div class="overlay"></div>
         <div class="contenido-tarjeta">
           <h2 class="titulo-tarjeta">Educación y concientización</h2>
@@ -73,17 +73,17 @@
       </article>
 
       <article class="tarjeta-voluntariado">
-        <img src="/AquaNet/img/monitoreo-agua.jpg" alt="Monitoreo del agua" class="imagen-fondo">
+        <img src="../img/monitoreo-agua.jpg" alt="Monitoreo del agua" class="imagen-fondo">
         <div class="overlay"></div>
         <div class="contenido-tarjeta">
           <h2 class="titulo-tarjeta">Monitoreo del agua</h2>
           <p class="descripcion-tarjeta">Medí niveles, analizá calidad del agua y reportá cambios en tu zona.</p>
-          <a href="/AquaNet/vistas/detalle-monitoreo.html" class="btn-ver-mas">Ver más</a>
+          <a href="../vistas/detalle-monitoreo.html" class="btn-ver-mas">Ver más</a>
         </div>
       </article>
 
       <article class="tarjeta-voluntariado">
-        <img src="/AquaNet/img/apoyo-comunitario.png" alt="Apoyo comunitario" class="imagen-fondo">
+        <img src="../img/apoyo-comunitario.png" alt="Apoyo comunitario" class="imagen-fondo">
         <div class="overlay"></div>
         <div class="contenido-tarjeta">
           <h2 class="titulo-tarjeta">Apoyo comunitario</h2>
@@ -93,7 +93,7 @@
       </article>
 
       <article class="tarjeta-voluntariado">
-        <img src="/AquaNet/img/tecnologia-datos.png" alt="Tecnología y datos" class="imagen-fondo">
+        <img src="../img/tecnologia-datos.png" alt="Tecnología y datos" class="imagen-fondo">
         <div class="overlay"></div>
         <div class="contenido-tarjeta">
           <h2 class="titulo-tarjeta">Tecnología y datos</h2>
@@ -196,8 +196,8 @@
 
   <div class="espacio-carrusel"></div>
 
-  <script src="/AquaNet/js/voluntariados.js"></script>
-  <script src="/AquaNet/js/carousel.js"></script>
+  <script src="../js/voluntariados.js"></script>
+  <script src="../js/carousel.js"></script>
 </body>
 
 </html>
