--- a/AquaNet/vistas/home.html
+++ b/AquaNet/vistas/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/foro.css">
     <link rel="stylesheet" href="../css/home.css">
-    <link rel="stylesheet" href="../css/carousel.css">
+    <link rel="stylesheet" href="../css/cortes.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
@@ -106,6 +106,11 @@
                 <img src="../img/caudal.png" class="icono-boton" alt="">
                 CAUDAL
             </button>
+
+             <button class="btn-cortes">
+                <img src="../img/caudal.png" class="icono-boton" alt="">
+                CORTES PROGRAMADOS
+            </button>
         </div>
 
         <div id="modal-reporte" class="modal-overlay">
@@ -164,68 +169,63 @@
 
     </div>
 
-    <div class="carousel-flotante">
-        <div class="contenedor-carousel">
-            <button class="nav-arrow izq" onclick="moveSlide(-1)">‹</button>
 
-            <div class="slides-viewport">
-                <div class="slides" id="slides">
+<div id="modal-cortes" class="modal-overlay">
+    <div class="modal-contenido">
 
-                    <div class="slide">
-                        <div class="panel cortes">
-                            <div class="panel-header">
-                                <span class="title">Cortes programados</span>
-                            </div>
-                            <div class="panel-body">
-                                <p><strong>Zona:</strong> Las Heras</p>
-                                <p><strong>Horario:</strong> 13:00 a 15:00</p>
-                                <p><strong>Motivo:</strong> Reparaciones</p>
-                            </div>
-                        </div>
-                        <div class="panel consejos">
-                            <div class="panel-header">
-                                <span class="title">Consejos</span>
-                            </div>
-                            <div class="panel-body">
-                                <p>textoalazarescritoparatesteatarcomoseveriaenlapantallalostextos</p>
-                                <p>textoalazarescritoparatesteatarcomoseveriaenlapantallalostextos</p>
-                                <p>textoalazarescritoparatesteatarcomoseveriaenlapantallalostextos</p>
-                            </div>
-                        </div>
+        <button class="modal-back" id="cerrarModalCortes">⟵</button>
+
+        <h2 class="modal-titulo">Cortes programados</h2>
+
+        <div class="modal-grid">
+
+            <div class="panel">
+                <div class="panel-header cortes-header">Cortes programados</div>
+
+                <div class="cortes-grid">
+
+                    <div class="corte-item">
+                        <p><strong>Zona:</strong> Las Heras</p>
+                        <p><strong>Horario:</strong> 13:00 a 15:00</p>
+                        <p><strong>Motivo:</strong> Reparaciones</p>
                     </div>
 
-                    <div class="slide">
-                        <div class="panel cortes">
-                            <div class="panel-header">
-                                <span class="title">Cortes programados</span>
-                            </div>
-                            <div class="panel-body">
-                                <p><strong>Zona:</strong> Lavalle</p>
-                                <p><strong>Horario:</strong> 09:00 a 11:00</p>
-                                <p><strong>Motivo:</strong> Mantenimiento </p>
-                            </div>
-                        </div>
+                    <div class="corte-item">
+                        <p><strong>Zona:</strong> Lavalle</p>
+                        <p><strong>Horario:</strong> 09:00 a 12:00</p>
+                        <p><strong>Motivo:</strong> Mantenimiento</p>
+                    </div>
 
-                        <div class="panel consejos">
-                            <div class="panel-header">
-                                <span class="title">Consejos</span>
-                            </div>
-                            <div class="panel-body">
-                                <p>textoalazarescritoparatesteatarcomoseveriaenlapantallalostextos</p>
-                                <p>textoalazarescritoparatesteatarcomoseveriaenlapantallalostextos</p>
-                                <p>textoalazarescritoparatesteatarcomoseveriaenlapantallalostextos</p>
-                            </div>
-                        </div>
+                    <div class="corte-item">
+                        <p><strong>Zona:</strong> San Carlos</p>
+                        <p><strong>Horario:</strong> 17:00 a 20:00</p>
+                        <p><strong>Motivo:</strong> Reemplazo de cañerías</p>
                     </div>
 
                 </div>
             </div>
 
-            <button class="nav-arrow der" onclick="moveSlide(1)">›</button>
+            <div class="panel">
+                <div class="panel-header consejos-header">Consejos</div>
+
+                <p class="consejo">• Consejos</p>
+                <p class="consejo">• Consejos</p>
+                <p class="consejo">• Consejos</p>
+            </div>
+
         </div>
+
     </div>
+</div>
+
+            </div>
+        </div>
+
     </div>
-    </div>
+
+
+    
+   
     <footer class="footer">
         <div class="footer-contenido">
             <div class="footer-col">
@@ -254,7 +254,6 @@
         </div>
     </footer>
 
-    <div class="espacio-carrusel"></div>
 </body>
 
 <script async defer
@@ -262,6 +261,5 @@
     </script>
 
 <script src="../js/home.js"></script>
-<script src="../js/carousel.js"></script>
 
 </html>
