--- a/AquaNet/vistas/voluntariadoVista.html
+++ b/AquaNet/vistas/voluntariadoVista.html
@@ -7,8 +7,9 @@
   <title>AquaNet - Voluntariados</title>
   <link rel="stylesheet" href="../css/foro.css">
   <link rel="stylesheet" href="../css/voluntariado.css">
-  <link rel="stylesheet" href="../css/carousel.css">
   <link rel="stylesheet" href="../css/footer.css">
+  <link rel="stylesheet" href="../css/botonesFlotantes.css">
+  <link rel="stylesheet" href="../css/cortes.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Fascinate&family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
@@ -26,7 +27,6 @@
       <nav class="navegacion">
         <a href="../vistas/voluntariadoVista.html" class="activo">Voluntariados</a>
         <a href="../vistas/foroVista.html">Foro</a>
-        <a href="#donaciones">Donaciones</a>
         <a href="#nosotros">Nosotros</a>
         <a href="#ayuda">Ayuda</a>
       </nav>
@@ -46,9 +46,9 @@
         <img src="../img/voluntariados-cerca.jpg" alt="Voluntariados cerca de mí" class="imagen-fondo">
         <div class="overlay"></div>
         <div class="contenido-tarjeta">
-          <h2 class="titulo-tarjeta">Voluntariados cerca de mí</h2>
-          <p class="descripcion-tarjeta">Filtrá por zona y encontrá oportunidades cerca tuyo.</p>
-          <a href="#" class="btn-ver-mas">Ver más</a>
+          <h2 class="titulo-tarjeta">Voluntariados: <br> Cerca de mí</h2>
+          <p class="descripcion-tarjeta">Encontrá oportunidades cerca tuyo.</p>
+          <a href="#" class="btn-ver-mas">Quiero ser parte ></a>
         </div>
       </article>
 
@@ -56,9 +56,9 @@
         <img src="../img/limpieza-ambiental.jpg" alt="Limpieza ambiental" class="imagen-fondo">
         <div class="overlay"></div>
         <div class="contenido-tarjeta">
-          <h2 class="titulo-tarjeta">Limpieza ambiental</h2>
+          <h2 class="titulo-tarjeta">Voluntariados: <br> Limpieza ambiental</h2>
           <p class="descripcion-tarjeta">Participá en jornadas de limpieza de ríos, lagunas o playas.</p>
-          <a href="#" class="btn-ver-mas">Ver más</a>
+          <a href="#" class="btn-ver-mas">Quiero ser parte ></a>
         </div>
       </article>
 
@@ -66,9 +66,9 @@
         <img src="../img/educacion.jpg" alt="Educación y concientización" class="imagen-fondo">
         <div class="overlay"></div>
         <div class="contenido-tarjeta">
-          <h2 class="titulo-tarjeta">Educación y concientización</h2>
+          <h2 class="titulo-tarjeta">Voluntariados: <br> Educación y concientización</h2>
           <p class="descripcion-tarjeta">Ayudá a difundir buenas prácticas de cuidado del agua en tu comunidad.</p>
-          <a href="#" class="btn-ver-mas">Ver más</a>
+          <a href="#" class="btn-ver-mas">Quiero ser parte ></a>
         </div>
       </article>
 
@@ -76,9 +76,9 @@
         <img src="../img/monitoreo-agua.jpg" alt="Monitoreo del agua" class="imagen-fondo">
         <div class="overlay"></div>
         <div class="contenido-tarjeta">
-          <h2 class="titulo-tarjeta">Monitoreo del agua</h2>
+          <h2 class="titulo-tarjeta">Voluntariados: <br> Monitoreo del agua</h2>
           <p class="descripcion-tarjeta">Medí niveles, analizá calidad del agua y reportá cambios en tu zona.</p>
-          <a href="../vistas/detalle-monitoreo.html" class="btn-ver-mas">Ver más</a>
+          <a href="../vistas/detalle-monitoreo.html" class="btn-ver-mas">Quiero ser parte ></a>
         </div>
       </article>
 
@@ -86,9 +86,9 @@
         <img src="../img/apoyo-comunitario.png" alt="Apoyo comunitario" class="imagen-fondo">
         <div class="overlay"></div>
         <div class="contenido-tarjeta">
-          <h2 class="titulo-tarjeta">Apoyo comunitario</h2>
+          <h2 class="titulo-tarjeta">Voluntariados: <br> Apoyo comunitario</h2>
           <p class="descripcion-tarjeta">Brindá asistencia a comunidades con problemas de acceso al agua.</p>
-          <a href="#" class="btn-ver-mas">Ver más</a>
+          <a href="#" class="btn-ver-mas">Quiero ser parte ></a>
         </div>
       </article>
 
@@ -96,75 +96,73 @@
         <img src="../img/tecnologia-datos.png" alt="Tecnología y datos" class="imagen-fondo">
         <div class="overlay"></div>
         <div class="contenido-tarjeta">
-          <h2 class="titulo-tarjeta">Tecnología y datos</h2>
+          <h2 class="titulo-tarjeta">Voluntariados: <br> Tecnología y datos</h2>
           <p class="descripcion-tarjeta">Desarrollá herramientas, mapas o análisis para mejorar la gestión del agua.</p>
-          <a href="#" class="btn-ver-mas">Ver más</a>
+          <a href="#" class="btn-ver-mas">Quiero ser parte ></a>
         </div>
       </article>
 
-    </div>
-    <div class="carousel-flotante">
-      <div class="contenedor-carousel">
-        <button class="nav-arrow izq" onclick="moveSlide(-1)">‹</button>
+      <div class="botones-laterales">
+        <button class="btn-reportar">
+          <img src="../img/reportar.png" class="icono-boton" alt="">
+          REPORTAR<br>PROBLEMA
+        </button>
 
-        <div class="slides-viewport">
-          <div class="slides" id="slides">
-
-            <div class="slide">
-              <div class="panel cortes">
-                <div class="panel-header">
-                  <span class="title">Cortes programados</span>
-                </div>
-                <div class="panel-body">
-                  <p><strong>Zona:</strong> Las Heras</p>
-                  <p><strong>Horario:</strong> 13:00 a 15:00</p>
-                  <p><strong>Motivo:</strong> Reparaciones</p>
-                </div>
-              </div>
-              <div class="panel consejos">
-                <div class="panel-header">
-                  <span class="title">Consejos</span>
-                </div>
-                <div class="panel-body">
-                  <p>textoalazarescritoparatesteatarcomoseveriaenlapantallalostextos</p>
-                  <p>textoalazarescritoparatesteatarcomoseveriaenlapantallalostextos</p>
-                  <p>textoalazarescritoparatesteatarcomoseveriaenlapantallalostextos</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="slide">
-              <div class="panel cortes">
-                <div class="panel-header">
-                  <span class="title">Cortes programados</span>
-                </div>
-                <div class="panel-body">
-                  <p><strong>Zona:</strong> Lavalle</p>
-                  <p><strong>Horario:</strong> 09:00 a 11:00</p>
-                  <p><strong>Motivo:</strong> Mantenimiento </p>
-                </div>
-              </div>
-
-              <div class="panel consejos">
-                <div class="panel-header">
-                  <span class="title">Consejos</span>
-                </div>
-                <div class="panel-body">
-                  <p>textoalazarescritoparatesteatarcomoseveriaenlapantallalostextos</p>
-                  <p>textoalazarescritoparatesteatarcomoseveriaenlapantallalostextos</p>
-                  <p>textoalazarescritoparatesteatarcomoseveriaenlapantallalostextos</p>
-                </div>
-              </div>
-            </div>
-
-          </div>
-        </div>
-
-        <button class="nav-arrow der" onclick="moveSlide(1)">›</button>
+        <button class="btn-cortes">
+          <img src="../img/caudal.png" class="icono-boton" alt="">
+          CORTES PROGRAMADOS
+        </button>
       </div>
     </div>
-    </div>
-    </div>
+
+
+    <div id="modal-cortes" class="modal-overlay">
+      <div class="modal-contenido">
+
+        <button class="modal-back" id="cerrarModalCortes">⟵</button>
+
+        <h2 class="modal-titulo">Cortes programados</h2>
+
+        <div class="modal-grid">
+
+          <div class="panel">
+            <div class="panel-header cortes-header">Cortes programados</div>
+
+            <div class="cortes-grid">
+
+              <div class="corte-item">
+                <p><strong>Zona:</strong> Las Heras</p>
+                <p><strong>Horario:</strong> 13:00 a 15:00</p>
+                <p><strong>Motivo:</strong> Reparaciones</p>
+              </div>
+
+              <div class="corte-item">
+                <p><strong>Zona:</strong> Lavalle</p>
+                <p><strong>Horario:</strong> 09:00 a 12:00</p>
+                <p><strong>Motivo:</strong> Mantenimiento</p>
+              </div>
+
+              <div class="corte-item">
+                <p><strong>Zona:</strong> San Carlos</p>
+                <p><strong>Horario:</strong> 17:00 a 20:00</p>
+                <p><strong>Motivo:</strong> Reemplazo de cañerías</p>
+              </div>
+
+            </div>
+          </div>
+
+          <div class="panel">
+            <div class="panel-header consejos-header">Consejos</div>
+
+            <p class="consejo">• Organizar tareas del hogar antes del corte (duchas, limpieza, cocina).</p>
+            <p class="consejo">• Cerrar bien todos los grifos para evitar salidas de agua inesperadas cuando vuelva el suministro.</p>
+            <p class="consejo">• Usar el agua almacenada con prudencia, priorizando lo esencial.</p>
+            <p class="consejo">• Reutilizar el agua cuando sea posible, por ejemplo para limpieza o riego.</p>
+            <p class="consejo">• Desconectar aparatos que usen agua, como lavadoras o lavavajillas, durante el corte.</p>
+          </div>
+        </div>
+      </div>
+
   </main>
   <footer class="footer">
     <div class="footer-contenido">
@@ -194,10 +192,8 @@
     </div>
   </footer>
 
-  <div class="espacio-carrusel"></div>
-
   <script src="../js/voluntariados.js"></script>
-  <script src="../js/carousel.js"></script>
+  <script src="../js/botonesFlotantes.js"></script>
 </body>
 
 </html>
